--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype" target="_blank"></i></a> -->
           <a href="https://www.linkedin.com/in/sami-al-fattani-a69531a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/samialfattani" target="_blank"><i class='bx bxl-github'></i></a>
-          <a href="https://github.com/samialfattani" target="_blank"><i class='fab fa-hackerrank' style="color:  aliceblue;"></i></a>
+          <a href="https://www.hackerrank.com/sami_alfattani" target="_blank"><i class='fab fa-hackerrank' style="color:  aliceblue;"></i></a>
 
           <!-- <a href="https://www.hackerrank.com/sami_alfattani?hr_r=1" ><i class='fab fa-hackerrank' style="color: aliceblue;"></i></a> -->
 
@@ -183,8 +183,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-bookmark-star-fill"></i>
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Awards</strong></p>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Conference and Certificates</strong></p>
             </div>
           </div>
 
@@ -321,21 +321,28 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Research Interest</h3>
             <div class="row">
-              <div class="col-lg-6">
-                <ul class="research">
-                  <li><i class="fas fa-database"></i> <strong>Database & Parallel computing <em>(My Master Thiess)</em></strong> </li>
-                  <li><i class="fas fa-network-wired"></i> <strong>Internet of Things (IoT) applications</strong></li>
-                  <li><i class="fas fa-robot"></i> <strong>Machine Learning <br>(ML)</strong></li>
-                  <li><i class="fas fa-laptop-medical"></i> <strong>Healthcare applications<br> <em>with human computer interaction</em> </strong> </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="research">
-                  <li><i class="fas fa-eye"></i> <strong>Pattern recognition <br><br></strong></li>
-                  <li><i class="fas fa-check-double"></i> <strong>Software Testing <br><br></strong></li>
-                  
-                </ul>
-              </div>
+              <table style="margin: 20px;" border="5">
+                <tr>
+                  <td class="icon"><i class="fas fa-database"></i></td>
+                  <td><strong>Database & Parallel computing <em>(My Master Thiess)</em></strong></td>
+                  <td class="icon"><i class="fas fa-network-wired"></i></td>
+                  <td><strong>Internet of Things (IoT) applications</strong></td>
+                </tr>
+                <tr>
+                  <td class="icon"><i class="fas fa-eye"></i> </td>
+                  <td><strong>Pattern recognition <br><br></strong></td>
+                  <td class="icon"><i class="fas fa-check-double"></i> </td>
+                  <td><strong>Software Testing <br><br></strong></td>
+                </tr>
+                <tr>
+                  <td class="icon"><i class="fas fa-robot"></i></td>
+                  <td><strong>Machine Learning <br>(ML)</strong></td>
+                  <td class="icon"><i class="fas fa-laptop-medical"></i> </td>
+                  <td><strong>Healthcare applications<br> <em>with human computer interaction</em> </strong></td>
+                </tr>
+                <tr>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
@@ -358,8 +365,8 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Engineering & Computer Science</h4>
-              <h5>2009 - 20012</h5>
+              <h5>2009 - 20012</h5><h4>Master of Engineering & Computer Science</h4>
+              
               <p><em>Nara Institute of Science and Technology (NAIST), Japan</em></p>
               <p> <b>30</b> Credit hours including Master desertation. Master thieses is about execute Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).</p>
             </div>
@@ -469,7 +476,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -583,10 +590,10 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -628,7 +635,8 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>-->
+    <!-- End Services Section  -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
