After adding research experience

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <!-- <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li> -->
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#facts" class="nav-link scrollto"><i class='bx bx-podcast'></i> <span>Facts</span></a></li>
+          <li><a href="#research" class="nav-link scrollto"><i class="bx bx-search"></i> <span>Research</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bxs-like' ></i> <span>Testimonials</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -105,7 +106,8 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
-            <img src="https://fakeimg.pl/300x300/">
+            <!-- <img src="https://fakeimg.pl/300x300/"> -->
+            <img src="assets/img/personal-1.png" height="300" width="280">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Developer &amp; Lecturer</h3>
@@ -146,6 +148,7 @@
           <!-- <p></p> -->
         </div>
 
+        <!-- https://icons.getbootstrap.com/ -->
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
@@ -182,6 +185,14 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
+              <i class="bi bi-coin"></i>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Funded Research Programs</strong></p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="count-box">
               <i class="bi bi-bookmark-star-fill"></i>
               <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Conference and Certificates</strong></p>
@@ -190,7 +201,7 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
-              <i class="bi bi-bookmark-star-fill"></i>
+              <i class="bi bi-terminal-fill"></i>
               <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Software Projects </strong>built from scratch</p>
             </div>
@@ -206,7 +217,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Programimng Skills</h2>
+          <h2>Programming Skills</h2>
           <!-- <p>Lorem, ipsum dolor.</p> -->
         </div>
 
@@ -331,13 +342,19 @@
                 <tr>
                   <td class="icon"><i class="fas fa-eye"></i> </td>
                   <td><strong>Pattern recognition <br><br></strong></td>
-                  <td class="icon"><i class="fas fa-check-double"></i> </td>
-                  <td><strong>Software Testing <br><br></strong></td>
+                  <!-- <td class="icon"><i class="fas fa-check-double"></i> </td>
+                  <td><strong>Software Testing <br><br></strong></td> -->
+                  <td class="icon">
+                    <i class="fas fa-lock"></i>
+                  </td>
+                  
+                  <td><strong>Cyber Security <br><br></strong></td>
+
                 </tr>
                 <tr>
                   <td class="icon"><i class="fas fa-robot"></i></td>
                   <td><strong>Machine Learning <br>(ML)</strong></td>
-                  <td class="icon"><i class="fas fa-laptop-medical"></i> </td>
+                  <td class="icon"><i class="fas fa-laptop-medical"></i></td>
                   <td><strong>Healthcare applications<br> <em>with human computer interaction</em> </strong></td>
                 </tr>
                 <tr>
@@ -348,7 +365,35 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <h3>Research Experience & Skills</h3>
+            <ol>
+              <li>
+                <a href="assets/img/certs/food-abstract.pdf" target="_blank">
+                  <i class='bx bxs-file-pdf pdf' ></i>
+                </a>
+                I am a co-author in a research funded by <b>250,000 SAR (£50,000)</b>. I wrote the major part of the proposal including abstract, literature review, methodology and project design. We are going to publish very soon (Augest 2022) targeting 3 articles in ISI Jornal. The research suggests a system that uses Internet Of Things (IoT) integrating with drone in Food Logistics Management(FLM).
+              </li>
+              <li>I am a co-author in a research that of involving dron and Crowd Management which is under proccess.</li>
+              <li>A research project of examining soft ear biometrics for human identification using Machine Learning. Currently, We are in the implementation phase, part of and I will contribute the writing. most probably we will publish on Feb 2023. </li>
+              <li>Best Poster award in 2nd research symposium in university of business and technology (UBT) (2017) (Attached)</li>
+              <li>Presenter of Workshop in How to Write Successful Proposal. </li> 
+              <li>Workshop in How to Make a Scientific Poster.</li>   
+              <li>Workshop in Design Thinking in UBT.</li>  
+              <li>Workshop in LEAN Startup Methodology in UBT.</li>  
+            </ol>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- End Research Section -->
+
+
 
 
     <!-- ======= Resume Section ======= -->
@@ -747,7 +792,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Apartment 50, Atlantic One, 16 St. Georges Close <br>
+                <p>Apartment 30, Atlantic One, 16 St. Georges Close <br>
                   Sheffield, S3 7AN <br>
                   United Kingdom</p>
               </div>
@@ -877,7 +922,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
