after adding certificates

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!--  Choose Bootstrap Icons from here: -->
-  <!-- https://icons.getbootstrap.com/ -->
+  <!-- https://icons.getbootstrap.com/icons/ -->
+  <!-- Example <i class="bi bi-alarm-fill"></i> -->
 
+  <!--  Choose Boxicons Icons from here: -->
+  <!-- https://boxicons.com/ -->
+  <!-- Example <i class='bx bxl-postgresql'></i> -->
 
   <!-- our project just needs Font Awesome Solid + Brands -->
   <script src="assets/vendor/fontawesome/b3360409b2.js" ></script>
@@ -367,7 +371,7 @@
       </div>
 
       <div class="container">
-
+        <!-- https://boxicons.com/?query=jpg -->
         <div class="row">
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Research Experience & Skills</h3>
@@ -378,13 +382,36 @@
                 </a>
                 I am a co-author in a research funded by <b>250,000 SAR (£50,000)</b>. I wrote the major part of the proposal including abstract, literature review, methodology and project design. We are going to publish very soon (Augest 2022) targeting 3 articles in ISI Jornal. The research suggests a system that uses Internet Of Things (IoT) integrating with drone in Food Logistics Management(FLM).
               </li>
-              <li>I am a co-author in a research that of involving dron and Crowd Management which is under proccess.</li>
+              <li>I am a co-author in a research that of involving dron and Crowd Management which is under proccess. </li>
               <li>A research project of examining soft ear biometrics for human identification using Machine Learning. Currently, We are in the implementation phase, part of and I will contribute the writing. most probably we will publish on Feb 2023. </li>
-              <li>Best Poster award in 2nd research symposium in university of business and technology (UBT) (2017) (Attached)</li>
-              <li>Presenter of Workshop in How to Write Successful Proposal. </li> 
-              <li>Workshop in How to Make a Scientific Poster.</li>   
-              <li>Workshop in Design Thinking in UBT.</li>  
-              <li>Workshop in LEAN Startup Methodology in UBT.</li>  
+              <li>
+                <a href="assets/img/certs/master-abstract.pdf" target="_blank">
+                  <i class='bx bxs-file-pdf pdf' ></i>
+                </a>
+                <b>Master thieses</b> Expermimental Study of executing Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).
+              </li>
+              <li>
+                <a href="assets/img/certs/Symposium.jpg" target="_blank">
+                  <i class='bx bxs-file-jpg'></i>
+                </a>
+                <b>Best Poster</b> award in 2nd research symposium in University of Business and Technology (UBT), Automated Configured Router For Controlling WiFi Sharing For Internet Guests. (2017)
+              </li>
+              <li>
+                Presenter of Workshop in How to Write Successful Proposal. 
+                <a href="assets/img/certs/How to write a proposal.jpg" target="_blank" rel="noopener noreferrer"><b>(Click)</b> </a> 
+              </li> 
+              <li>
+                Workshop in How to Make a Scientific Poster.
+                <a href="assets/img/certs/How to make a Scientific Poster.jpg" target="_blank" rel="noopener noreferrer"> <b>(Click)</b> </a> 
+              </li>   
+              <li>
+                Workshop in Design Thinking in UBT.
+                <a href="assets/img/certs/Design Thinking.jpg" target="_blank" rel="noopener noreferrer"> <b>(Click)</b> </a>
+              </li>  
+              <li>
+                Workshop in LEAN Startup Methodology in UBT.
+                <a href="assets/img/certs/Lean Methodology.jpg" target="_blank" rel="noopener noreferrer"> <b>(Click)</b> </a>
+              </li>  
             </ol>
           </div>
         </div>
@@ -413,7 +440,7 @@
               <h5>2009 - 20012</h5><h4>Master of Engineering & Computer Science</h4>
               
               <p><em>Nara Institute of Science and Technology (NAIST), Japan</em></p>
-              <p> <b>30</b> Credit hours including Master desertation. Master thieses is about execute Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).</p>
+              <p> <b>30</b> Credit hours including Master desertation. Master thieses was about execute Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Computer Engineering</h4>
