after adding TOSMTY and other CSS fixes

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Sami Alfattany</a></h1>
+        <a href="index.html">
+          <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+          <h1 class="text-light">Sami Alfattany</h1>
+        </a>
+        
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/Sami_alfattani" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/sami.alfattani/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
@@ -74,9 +77,11 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
+          <!-- https://boxicons.com/ -->
           <!-- <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li> -->
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#facts" class="nav-link scrollto"><i class='bx bx-podcast'></i> <span>Facts</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class='bx bx-code-block'></i>   <span>Programming Skills</span></a></li>
           <li><a href="#research" class="nav-link scrollto"><i class="bx bx-search"></i> <span>Research</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
@@ -339,7 +344,7 @@
               <table style="margin: 20px;" border="5">
                 <tr>
                   <td class="icon"><i class="fas fa-database"></i></td>
-                  <td><strong>Database & Parallel computing <em>(My Master Thiess)</em></strong></td>
+                  <td><strong>Database & Parallel computing <em>(My Master Thesis)</em></strong></td>
                   <td class="icon"><i class="fas fa-network-wired"></i></td>
                   <td><strong>Internet of Things (IoT) applications</strong></td>
                 </tr>
@@ -379,20 +384,24 @@
               <li>
                 <a href="assets/img/certs/food-abstract.pdf" target="_blank">
                   <i class='bx bxs-file-pdf pdf' ></i>
+                  <br> abstract
                 </a>
-                I am a co-author in a research funded by <b>250,000 SAR (£50,000)</b>. I wrote the major part of the proposal including abstract, literature review, methodology and project design. We are going to publish very soon (Augest 2022) targeting 3 articles in ISI Jornal. The research suggests a system that uses Internet Of Things (IoT) integrating with drone in Food Logistics Management(FLM).
+                I am a co-author in a research funded by <b>250,000 SAR (£50,000)</b> with a research group (5 PhDs including 2 Professors) from University of Jeddah (Saudi). The research suggests a system that uses Internet Of Things (IoT) integrating with drone in Food Logistics Management(FLM). I wrote the major part of the proposal including abstract, literature review, methodology and project design. We are going to publish very soon (Augest 2022) targeting 3 articles in ISI Jornal.
               </li>
               <li>I am a co-author in a research that of involving dron and Crowd Management which is under proccess. </li>
-              <li>A research project of examining soft ear biometrics for human identification using Machine Learning. Currently, We are in the implementation phase, part of and I will contribute the writing. most probably we will publish on Feb 2023. </li>
+              <li>A research project of examining soft ear biometrics for human identification using Machine Learning. Currently, We are in the implementation phase and I am contributing the coding parts. Most probably we will publish on Feb 2023. </li>
               <li>
                 <a href="assets/img/certs/master-abstract.pdf" target="_blank">
                   <i class='bx bxs-file-pdf pdf' ></i>
                 </a>
-                <b>Master thieses</b> Expermimental Study of executing Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).
+                <b>Master Thesis:</b> Expermimental Study of executing Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).
               </li>
               <li>
                 <a href="assets/img/certs/Symposium.jpg" target="_blank">
                   <i class='bx bxs-file-jpg'></i>
+                </a>
+                <a href="assets/img/poster_tosmty.pdf" target="_blank">
+                  <i class='bx bxs-file-pdf pdf' ></i>
                 </a>
                 <b>Best Poster</b> award in 2nd research symposium in University of Business and Technology (UBT), Automated Configured Router For Controlling WiFi Sharing For Internet Guests. (2017)
               </li>
@@ -835,7 +844,10 @@
                 <h4>Call:</h4>
                 <p>
                   <a href="tel:+44 74 127 80808">+44 74 127 80808</a> <br>
-                  <a href="tel:+966 5645 99 127">+966 5645 99 127</a>                   
+                  <a href="tel:+966 5645 99 127">+966 5645 99 127</a>
+                  <a href="https://wa.me/+966564599127">
+                    <img src="assets/img/whatsapp.png" height="30" width="30">
+                  </a>
                 </p>
               </div>
 
