--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <!-- <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li> -->
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#facts" class="nav-link scrollto"><i class='bx bx-podcast'></i> <span>Facts</span></a></li>
-          <li><a href="#skills" class="nav-link scrollto"><i class='bx bx-code-block'></i>   <span>Programming Skills</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class='bx bx-code-block'></i>   <span>Coding Skills</span></a></li>
           <li><a href="#research" class="nav-link scrollto"><i class="bx bx-search"></i> <span>Research</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
@@ -226,7 +226,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Programming Skills</h2>
+          <h2>Coding Skills</h2>
           <!-- <p>Lorem, ipsum dolor.</p> -->
         </div>
 
@@ -265,6 +265,19 @@
                 <img class="skill-img" src="assets/img/skills/flask.png" alt="" >
                 <img class="skill-img" src="assets/img/skills/pytorch.png" alt="" >
                 <i class="val">95%</i>
+              </span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Mobile App 
+                <img class="skill-img" src="assets/img/skills/flutter.png" alt="" >
+                <img class="skill-img" src="assets/img/skills/android.png" alt="" >
+                <img class="skill-img" src="assets/img/skills/swift.png" alt="" >
+                <img class="skill-img" src="assets/img/skills/react_native.png" alt="" >
+                <i class="val">75%</i>
               </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -463,13 +476,13 @@
             <div class="resume-item">
               <h4>Online Store</h4>
               <h5>2020</h5>
-              <p><em>A solution of online store system build from scratch using Python-Flask framework integrated with MySQL. The system includes administration panel to manage different type of users, products, brands, and history log.</em></p>
+              <fp><em>A solution of online store system build from scratch using Python-Flask framework integrated with MySQL. The system includes administration panel to manage different type of users, products, reports, and history log.</em></p>
             </div>
   
             <div class="resume-item">
-              <h4>E-learning System for CLOs</h4>
+              <h4>E-learning System for CLOs & PLOs</h4>
               <h5>2019</h5>
-              <p><em>A solution of e-learning system that computerizing the Course Learning Outcome (CLO) assessments.</em></p>
+              <p><em>A solution of e-learning system that computerizing the Course Learning Outcome (CLO) assessments. It built with the respect of ABET & NCAAA accrditation framework.</em></p>
             </div>
 
             <div class="resume-item">
@@ -516,7 +529,7 @@
             </div>
 
             <div class="resume-item">
-              <h4>Database developer (especially in ORACLE)</h4>
+              <h4>Database developer (ORACLE)</h4>
               <h5>2014 – 2016</h5>
               <p><em>Umm-Alqura Unicersity, IT Center, Makkah, Saudi Arabia</em></p>
               <ul>
