after adding IEEEXteme and Hardware skills

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python 
+              <span class="skill">Python:
                 <img class="skill-img" src="assets/img/skills/python.png" alt="" >
                 <img class="skill-img" src="assets/img/skills/flask.png" alt="" >
                 <img class="skill-img" src="assets/img/skills/pytorch.png" alt="" >
@@ -272,7 +272,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Mobile App 
+              <span class="skill">Mobile App:
                 <img class="skill-img" src="assets/img/skills/flutter.png" alt="" >
                 <img class="skill-img" src="assets/img/skills/android.png" alt="" >
                 <img class="skill-img" src="assets/img/skills/swift.png" alt="" >
@@ -280,11 +280,25 @@
                 <i class="val">75%</i>
               </span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-          </div>
+
+            <div class="progress">
+              <span class="skill">Hardware:
+                <img class="skill-img" src="assets/img/skills/raspberry_pi.svg" alt="">
+                <img class="skill-img" src="assets/img/skills/arduino.png" alt="">
+                <img class="skill-img" src="assets/img/skills/drone.png" alt="">
+                <i class="val">50%</i>
+              </span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+
+          </div><!-- End of Left Colmun -->
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
@@ -292,7 +306,7 @@
               <span class="skill">Database: 
                 <img class="skill-img" src="assets/img/skills/mongodb.png" alt="" >
                 <img class="skill-img" src="assets/img/skills/firebease.png" alt="" >                
-                <img class="skill-img" src="assets/img/skills/oracle.png" alt="" width="80">
+                <img class="skill-img" src="assets/img/skills/oracle.png" alt="" width="100">
                 <img class="skill-img" src="assets/img/skills/postgres.png" alt="" >
                 <i class="val">100%</i>
               </span>
@@ -328,8 +342,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Linux
+              <span class="skill">Linux:
                 <img class="skill-img" src="assets/img/skills/linux.png" alt="">
+                <img class="skill-img" src="assets/img/skills/kali.png" alt="">
                 <img class="skill-img" src="assets/img/skills/docker.png" alt="">
                 <img class="skill-img" src="assets/img/skills/git.png" alt="">
                 <i class="val">85%</i>
@@ -339,7 +354,8 @@
               </div>
             </div>
 
-          </div>
+
+          </div> <!-- End of left coulmn -->
 
         </div>
 
@@ -395,8 +411,8 @@
             <h3>Research Experience & Skills</h3>
             <ol>
               <li>
-                <a href="assets/img/certs/food-abstract.pdf" target="_blank">
-                  <i class='bx bxs-file-pdf pdf' ></i>
+                <a class="proof_icon" href="assets/img/certs/food-abstract.pdf" target="_blank">
+                  <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                   <br> abstract
                 </a>
                 I am a co-author in a research funded by <b>250,000 SAR (£50,000)</b> with a research group (5 PhDs including 2 Professors) from University of Jeddah (Saudi). The research suggests a system that uses Internet Of Things (IoT) integrating with drone in Food Logistics Management(FLM). I wrote the major part of the proposal including abstract, literature review, methodology and project design. We are going to publish very soon (Augest 2022) targeting 3 articles in ISI Jornal.
@@ -404,17 +420,17 @@
               <li>I am a co-author in a research that of involving dron and Crowd Management which is under proccess. </li>
               <li>A research project of examining soft ear biometrics for human identification using Machine Learning. Currently, We are in the implementation phase and I am contributing the coding parts. Most probably we will publish on Feb 2023. </li>
               <li>
-                <a href="assets/img/certs/master-abstract.pdf" target="_blank">
-                  <i class='bx bxs-file-pdf pdf' ></i>
+                <a class="proof_icon" href="assets/img/certs/master-abstract.pdf" target="_blank">
+                  <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                 </a>
                 <b>Master Thesis:</b> Expermimental Study of executing Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).
               </li>
               <li>
-                <a href="assets/img/certs/Symposium.jpg" target="_blank">
-                  <i class='bx bxs-file-jpg'></i>
+                <a class="proof_icon" href="assets/img/certs/Symposium.jpg" target="_blank">
+                  <i class='bx bxs-file-jpg proof_icon'></i>
                 </a>
-                <a href="assets/img/poster_tosmty.pdf" target="_blank">
-                  <i class='bx bxs-file-pdf pdf' ></i>
+                <a class="proof_icon" href="assets/img/poster_tosmty.pdf" target="_blank">
+                  <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                 </a>
                 <b>Best Poster</b> award in 2nd research symposium in University of Business and Technology (UBT), Automated Configured Router For Controlling WiFi Sharing For Internet Guests. (2017)
               </li>
@@ -523,8 +539,16 @@
               <h5>2016 – 2021</h5>
               <p><em>University of Business and Technology (UBT), Jeddah, Saudi Arabia</em></p>
               <ul>
-                <li>Supervising Participated Members in Hackathon Jeddah for Programming and AI 2021</li>
-                <li>Trainer for Participate in IEEEXtreme Programming Competition. 2016 and 2019. As we </li>
+                <li>Supervising Participants in Hackathon Jeddah for Programming and AI 2021</li>
+                <li>                  
+                  <a class="proof_icon" href="assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank">
+                    <i class='bx bxs-file-pdf pdf proof_icon' ></i>
+                  </a>
+                  <a class="proof_icon" href="assets/img/certs/IEEEXtreme-12.0-2018.pdf" target="_blank">
+                    <i class='bx bxs-file-pdf pdf proof_icon' ></i>
+                  </a>
+                  Trainer for Participating in IEEEXtreme Programming Competition. 2016 and 2018. We have achieved a competable socre (3rd over Saudi)   
+                </li>
               </ul>
             </div>
 
@@ -745,10 +769,27 @@
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
+              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  He mainly worked alone and created a test bed system by himself. It means that he is suited to be a researcher. In addition, he is bright and has enthusiasm not only for his research theme but also for other related areas, such as fundamental algorithm design and parallel processing with GPGPU. (2012)
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  <a href="assets/img/testimonials/miyazaki-letter.pdf" target="_blank">
+                    <i class='bx bxs-file-pdf pdf' ></i>
+                  </a>
+                </p>
+                <img src="assets/img/testimonials/miyazaki.jpg" class="testimonial-img" alt="">
+                <h3>Professor Jun Miyazaki</h3>
+                <h4>School of Information Science</h4>
+              </div>
+            </div>
+            <!-- End testimonial item -->
+
+            <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Mr. Alfattany is a talented person. He is intelligent and hardworking. Moreover, he tries to do the assigned job as perfectly as possible. I have no hesitation in strongly recommending him for higher studies. I am confident he would perform quite well in his graduate studies.
+                  Mr. Alfattany is a talented person. He is intelligent and hardworking. Moreover, he tries to do the assigned job as perfectly as possible. I have no hesitation in strongly recommending him for higher studies. I am confident he would perform quite well in his graduate studies. (2007)
 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   <a href="assets/img/testimonials/khalid-letter.pdf" target="_blank">
@@ -768,7 +809,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Sami is an ambitious student and eager to learn, he applies his analytical skills to his work, something that is evident in his questions during and after lectures. Sami's excellent programming skills are visible is all the projects that he submitted, especially in MATLAB and C++.
+                  Sami is an ambitious student and eager to learn, he applies his analytical skills to his work, something that is evident in his questions during and after lectures. Sami's excellent programming skills are visible is all the projects that he submitted, especially in MATLAB and C++. (2007)
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   <a href="assets/img/testimonials/anas-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
@@ -786,7 +827,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Mr. Sami Alfattany is a hard worker student. I found him a conscientious, keen and energetic young man. I am confident that, given proper opportunity, he will do well in any place.
+                  Mr. Sami Alfattany is a hard worker student. I found him a conscientious, keen and energetic young man. I am confident that, given proper opportunity, he will do well in any place. (2007)
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   <a href="assets/img/testimonials/hamza-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
@@ -797,24 +838,6 @@
                 <h4>Vise Dean, Collage of Eng.</h4>
               </div>
             </div><!-- End testimonial item -->
-
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  He mainly worked alone and created a test bed system by himself. It means that he is suited to be a researcher. In addition, he is bright and has enthusiasm not only for his research theme but also for other related areas, such as fundamental algorithm design and parallel processing.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  <a href="assets/img/testimonials/miyazaki-letter.pdf" target="_blank">
-                    <i class='bx bxs-file-pdf pdf' ></i>
-                  </a>
-                </p>
-                <img src="assets/img/testimonials/miyazaki.jpg" class="testimonial-img" alt="">
-                <h3>Professor Jun Miyazaki</h3>
-                <h4>School of Information Science</h4>
-              </div>
-            </div>
-            <!-- End testimonial item -->
 
 
           </div>
@@ -830,7 +853,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row" data-aos="fade-in">
