--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <!-- <h4>Software Engineering (SE) Lecturer & Developer</h4> -->
-              <h5>2013 - 2022: Software Engineering (SE) Lecturer & Developer</h5>
+              <h5>2013 - 2022: Software Engineering (SE) Lecturer</h5>
               <p><em>University of Business and Technology (UBT), Jeddah, Saudi Arabia</em></p>
               <ul>
                 <li>Teaching 30+ different courses related to SE including Programming, Databases, Web & Mobile Develpment and others.</li>
@@ -551,10 +551,11 @@
               <ul>
                 <li>Supervising Participants in Hackathon Jeddah for Programming and AI 2021</li>
                 <li>                  
-                  <a class="proof_icon" href="assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank">
+                  <!-- <a class="proof_icon" href="assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank"> -->
+                  <a class="proof_icon" href="https://docs.google.com/viewerng/viewer?url=https://samialfattani.github.io/assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                   </a>
-                  <a class="proof_icon" href="assets/img/certs/IEEEXtreme-12.0-2018.pdf" target="_blank">
+                  <a class="proof_icon" href="assets/img/certs/IEEEXtreme-12.0-2018.pdf" target="_blank" >
                     <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                   </a>
                   Trainer for Participating in IEEEXtreme Programming Competition. 2016 and 2018. We have achieved a competable socre (3rd over Saudi)   
@@ -603,7 +604,8 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+
+<!-- ======= Portfolio Section ======= -->
     <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
